OpenLGTV BCM: support for versioned ywe*.tar.gz files, including ywedata.tar.gz
git-svn-id: http://svn.openlgtv.org.ru@1166 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -45,6 +45,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: better parsing for URLs in RSS parser
     * ADD: TVN alternative service
     * ADD: 'showmsg' shell function to show 2-line messages on TV screen
+    * CHANGE: support for versioned ywe*.tar.gz files instead ywe.tar.gz filename only, with support for ywedata.tar.gz archives
 
 0.5.0-rc1 [2012.05.09]:
     * FIX: FileManager: copy/move/erase actions when mouse was used for file/dir navigation
