OpenLGTV BCM: make USB mount points unmounting on poweroff action in background
git-svn-id: http://svn.openlgtv.org.ru@1167 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -43,6 +43,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: Network Shares mount with old (pre 0.5.0-rc1) config format
     * FIX: handle '?', '&' chars and space in URLs in RSS parser
     * FIX: better parsing for URLs in RSS parser
+    * FIX: unmount all USB mount points separately in background to avoid poweroff on timeout when power button pressed while disk is in sleep mode
     * ADD: TVN alternative service
     * ADD: 'showmsg' shell function to show 2-line messages on TV screen
     * CHANGE: support for versioned ywe*.tar.gz files instead ywe.tar.gz filename only, with support for ywedata.tar.gz archives
