--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -46,6 +46,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: unmount all USB mount points separately in background to avoid poweroff on timeout when power button pressed while disk is in sleep mode
     * ADD: TVN alternative service
     * ADD: 'showmsg' shell function to show 2-line messages on TV screen
+    * UPDATE: busybox upgrade from 1.20.0 to 1.20.1 (with 'ash', 'ifupdown', 'man', 'mke2fs', 'ps' and 'tar' patches)
     * CHANGE: support for versioned ywe*.tar.gz files instead ywe.tar.gz filename only, with support for ywedata.tar.gz archives
 
 0.5.0-rc1 [2012.05.09]:
