OpenLGTV BCM: update IR codes in irkeymap.cfg
git-svn-id: http://svn.openlgtv.org.ru@1173 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -48,6 +48,7 @@ TODO (not everything to be done for 0.5.0):
     * ADD: TVN alternative service
     * ADD: 'showmsg' shell function to show 2-line messages on TV screen
     * UPDATE: busybox upgrade from 1.20.0 to 1.20.1 (with 'ash', 'ifupdown', 'man', 'mke2fs', 'ps' and 'tar' patches)
+    * UPDATE: update IR codes in irkeymap.cfg
     * CHANGE: support for versioned ywe*.tar.gz files instead ywe.tar.gz filename only, with support for ywedata.tar.gz archives
 
 0.5.0-rc1 [2012.05.09]:
