--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -46,6 +46,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: unmount all USB mount points separately in background to avoid poweroff on timeout when power button pressed while disk is in sleep mode
     * FIX: LG firmware upgrades with "big" EPK files from USB that remove OpenLGTV BCM - OpenLGTV BCM will be removed but TV will still work
     * FIX: '3' (K_3) button handling in send_key.sh script and Remote Control page
+    * FIX: msdl binary handling in msdl.sh
     * ADD: TVN alternative service
     * ADD: 'showmsg' shell function to show 2-line messages on TV screen
     * UPDATE: busybox upgrade from 1.20.0 to 1.20.1 (with 'ash', 'ifupdown', 'man', 'mke2fs', 'ps' and 'tar' patches)
