OpenLGTV BCM: Remote Control web page rewrite by dbunic
git-svn-id: http://svn.openlgtv.org.ru@1177 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -18,12 +18,13 @@ Not resolved (yet) issues: (status as for 0.5.0-rc2):
     * Some USB mouses or keyboard+mouse combo need to copy additional kernel modules - most modules binaries are in addons in SVN and are supported
     * USB keyboards are not supported in web browser
     * Bluetooth HID devices are not supported
-    * SmartTV (GP3B) builds are not useful besides shell console
+    * SmartTV (GP3B) builds are not useful besides shell console tools only
 
 TODO (not everything to be done for 0.5.0):
     * FileManager: add subtitles loading and audio tracks change possibility in played videos (?)
     * FileManager: add check mark to select multiple files/dirs and handle that in copy/move/delete/play (?)
     * FileManager: add command line or command window (?)
+    * add support for 'SmartTV-addon' packages
     * insert characters in cursor position in WebUI, Internet Browser and FileManager dialogs, not always at the end of string
     * udpxy integration for udp:// and rtp:// links
     * update and test scripts chrooted on SmartTV models
@@ -52,6 +53,7 @@ TODO (not everything to be done for 0.5.0):
     * UPDATE: busybox upgrade from 1.20.0 to 1.20.1 (with 'ash', 'ifupdown', 'man', 'mke2fs', 'ps' and 'tar' patches)
     * UPDATE: update IR codes in irkeymap.cfg
     * CHANGE: support for versioned ywe*.tar.gz files instead ywe.tar.gz filename only, with support for ywedata.tar.gz archives
+    * CHANGE: Remote Control web page rewriten by dbunic
 
 0.5.0-rc1 [2012.05.09]:
     * FIX: FileManager: copy/move/erase actions when mouse was used for file/dir navigation
