--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/index.html
@@ -1,116 +1,270 @@
-<content-type: text/html>
-
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<!--  OpenLGTV Remote Control by mihaifireball   -->
-<!--  modified by xeros -->
-<head>
-  <title>OpenLGTV Remote Control</title>
-  <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
-  <style type="text/css">
-    input {font-size: 11pt;}
-    span {font-size: 1pt;}
- </style>
-</head>
-<body>
-<center>
-<div style="width: 310px; background-color:#151515;">
-<font size="-2">
-<span><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_POWER';" value="Power" style="background-color:red; height: 30px; width: 65px;" /><font size="+1" color="yellow"> OpenLGTV BCM remote</font>
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_ENERGY_SAVING';" value="EnergyS" style="height: 30px; width: 64px; background-color:lightgreen;" />&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_AV_MODE';" value="A / V" style="height: 30px; width: 64px; background-color:#FFEA8A;" />&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_INPUT';" style="height: 30px; width: 64px; background-color:white;" value="Input" />&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_TV_RAD';" style="height: 30px; width: 64px; background-color:white;" value="TV/RAD"/> 
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_1';" style="height: 30px; width: 85px;" value="1 .,;@"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_2';" style="height: 30px; width: 85px;" value="2 abc"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_3';" style="height: 30px; width: 85px;" value="3 def"/>
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_4';" style="height: 30px; width: 85px;" value="4 ghi"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_5';" style="height: 30px; width: 85px;" value="5 jkl"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_6';" style="height: 30px; width: 85px;" value="6 mno"/>
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_7';" style="height: 30px; width: 85px;" value="7 pqrs"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_8';" style="height: 30px; width: 85px;" value="8 tuv"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_9';" style="height: 30px; width: 85px;" value="9 wxyz"/>
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_LIST';" style="height: 30px; width: 85px;" value="LIST"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_0';" style="height: 30px; width: 85px;" value="0 ._."/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_Q_VIEW';" style="height: 30px; width: 85px;" value="Q. VIEW"/>
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_VOL_UP';" style="height: 38px; width: 80px; background-color: lightblue;" value="VOL. Up"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_FAV_MARK';" style="height: 30px; width: 70px;" value="FAV"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PAGE_UP';" style="height: 38px; width: 80px; background-color: lightblue;" value="CH. Up"/>
-<br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RATIO';" style="height: 28px; width: 70px;" value="RATIO"/>
-<br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_VOL_DOWN';" style="height: 38px; width: 80px; background-color: lightblue;" value="VOL.Dwn"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_MUTE';" style="height: 30px; width: 70px;" value="MUTE"/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PAGE_DOWN';" style="height: 38px; width: 80px; background-color: lightblue;" value="CH. Dwn"/>
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_MENU';" style="height: 30px; width: 85px;" value="MENU"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_NETCAST';" style="height: 30px; width: 85px;" value="NetCast"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_Q_MENU';" style="height: 30px; width: 85px;" value="Q. MENU"/>
-<!-- span><br><br></span -->
-<br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_UP';" style="font-size: 10pt; height: 40px; width: 85px;" value="/\"/>
-<!-- span><br><br></span -->
-<br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_LEFT';" style="font-size: 13pt; height: 40px; width: 85px;" value="<"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_OK';" style="font-size: 13pt; height: 40px; width: 85px;" value="OK"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RIGHT';" style="font-size: 13pt; height: 40px; width: 85px;" value=">"/>
-<!-- span><br><br></span -->
-<br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_DOWN';" style="font-size: 10pt; height: 40px; width: 85px;" value="\/"/>
-<!-- span><br><br></span -->
-<br>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RETURN_EXIT';" style="height: 30px; width: 85px;" value="BACK"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_GUIDE';" style="height: 30px; width: 85px;" value="GUIDE"/>&nbsp; &nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_EXIT';" style="height: 30px; width: 85px;" value="EXIT"/>
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_RED_KEY';" style="height: 30px; width: 64px; background-color:red;" value=""/>&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_GREEN_KEY';" style="height: 30px; width: 64px; background-color:green;" value=""/>&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_YELLOW_KEY';" style="height: 30px; width: 64px; background-color:yellow;" value=""/>&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_BLUE_KEY';" style="height: 30px; width: 64px; background-color:blue;" value=""/> 
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_TEXT';" style="height: 30px; width: 85px;" value="TEXT"/>
-&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_T_OPT';" style="height: 30px; width: 85px;" value="T.OPT"/>
-&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_SUBTITLE';" style="height: 30px; width: 85px;" value="Subtitle"/>
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_STOP';" style="height: 30px; width: 85px;" value="STOP"/>
-&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PLAY';" style="height: 30px; width: 85px;" value="PLAY"/>
-&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_PAUSE';" style="height: 30px; width: 85px;" value="PAUSE"/>
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_BACKWARD';" style="height: 30px; width: 85px;" value="Rewind"/>
-&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_FORWARD';" style="height: 30px; width: 85px;" value="Forward"/>
-&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_SIMPLINK';" style="height: 30px; width: 85px;" value="Simplink"/>
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_INFO';" style="height: 30px; width: 85px;" value="INFO"/>
-&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_AD';" style="height: 30px; width: 85px;" value="AD"/>
-&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_APP';" style="height: 30px; width: 85px;" value="APP/*"/>
-<span><br><br></span>
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_REC';" style="height: 30px; width: 85px;" value="REC"/>
-&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_3D';" style="height: 30px; width: 85px; color: red;" value="3D"/>
-&nbsp;&nbsp;
-<input type=button onClick="javascript:window.location='remote.cgi?IRkey=K_LIVETV';" style="height: 30px; width: 85px;" value="LIVE TV"/>
-<span><br><br></span>
-</font>
-</div>
-</center>
-</body>
+	<!-- OpenLGTV Remote Control by mihaifireball -->
+	<!-- modified by xeros -->
+	<!-- rewritten by dbunic (09/2012) - www.redips.net -->
+	<head>
+		<title>OpenLGTV Remote Control</title>
+		<meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
+		<script type="text/javascript" src="remote.js"></script>
+		<!-- meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" / -->
+		<!-- meta name="viewport" content="width=device-width; target-densitydpi=device-dpi; user-scalable=no;" / -->
+		<meta name="viewport" content="width=240; height=640;" />
+		<link rel="stylesheet" href="remote.css" type="text/css" media="screen"/>
+	</head>
+	<body><center>
+		<!-- main container -->
+		<div id="main">
+			<!-- main table -->
+			<table>
+				<colgroup>
+					<col width="73"/>
+					<col width="73"/>
+					<col width="73"/>
+				</colgroup>
+				<!-- power button -->
+				<tr>
+					<td>
+						<input type="button" onClick="remote.key('K_POWER')" value="P" class="power red"/>
+					</td>
+					<th colspan="2" id="title">OpenLGTV BCM</th>
+				</tr>
+				<!-- Energy saving, A/V, Input, TV/RAD -->
+				<tr>
+					<th colspan="3">
+						<table>
+							<colgroup>
+								<col width="57"/>
+								<col width="57"/>
+								<col width="57"/>
+								<col width="57"/>
+							</colgroup>
+							<tr>
+								<th>
+									<input type="button" onClick="remote.key('K_ENERGY_SAVING')" value="EnergyS" class="green four mt"/>
+								</th>
+								<th>
+									<input type="button" onClick="remote.key('K_AV_MODE')" value="A / V" class="yellow four mt"/>
+								</th>
+								<th>
+									<input type="button" onClick="remote.key('K_INPUT')" value="Input" class="four mt"/>
+								</th>
+								<th>
+									<input type="button" onClick="remote.key('K_TV_RAD')" value="TV/R" class="four mt"/>
+								</th>
+							</tr>
+						</table>
+					</th>
+				</tr>
+				<!-- Channels -->
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_1')" value="1 .,;@" class="mt"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_2')" value="2 abc" class="mt"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_3')" value="3 def" class="mt"/>
+					</th>
+				</tr>
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_4')" value="4 ghi"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_5')" value="5 jkl"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_6')" value="6 mno"/>
+					</th>
+				</tr>
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_7')" value="7 pqrs"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_8')" value="8 tuv"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_9')" value="9 wxyz"/>
+					</th>
+				</tr>
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_LIST')" value="LIST"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_0')" value="0 ._."/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_Q_VIEW')" value="Q. VIEW"/>
+					</th>
+				</tr>
+				<!-- volume, fav / ratio / mute, program -->
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_VOL_UP')" value="VOL +" class="lightBlue mt"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_FAV_MARK')" value="FAV" class="mt"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_PAGE_UP')" value="CH +" class="lightBlue mt"/>
+					</th>
+				</tr>
+				<tr>
+					<th></th>
+					<th>
+						<input type="button" onClick="remote.key('K_RATIO')" value="RATIO"/>
+					</th>
+					<th></th>
+				</tr>
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_VOL_DOWN')" class="lightBlue" value="VOL -"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_MUTE')" value="MUTE"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_PAGE_DOWN')" class="lightBlue" value="CH -"/>
+					</th>
+				</tr>
+				<!-- menu, netcast, quick menu -->
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_MENU')" value="MENU" class="mt"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_NETCAST')" value="NetCast" class="mt"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_Q_MENU')" value="Q. MENU" class="mt"/>
+					</th>
+				</tr>
+				<!-- up/down, left/right, OK -->
+				<tr>
+					<th></th>
+					<th>
+						<input type="button" onClick="remote.key('K_UP')" value="/\"/>
+					</th>
+					<th></th>
+				</tr>
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_LEFT')" value="<"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_OK')" value="OK"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_RIGHT')" value=">"/>
+					</th>
+				</tr>
+				<tr>
+					<th></th>
+					<th>
+						<input type="button" onClick="remote.key('K_DOWN')" value="\/"/>
+					</th>
+					<th></th>
+				</tr>
+				<!-- back, guide, exit -->
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_RETURN_EXIT')" value="BACK"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_GUIDE')" value="GUIDE"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_EXIT')" value="EXIT"/>
+					</th>
+				</tr>
+				<!-- red, green, yellow, blue -->
+				<tr>
+					<th colspan="3">
+						<table>
+							<colgroup>
+								<col width="57"/>
+								<col width="57"/>
+								<col width="57"/>
+								<col width="57"/>
+							</colgroup>
+							<tr>
+								<th>
+									<input type="button" onClick="remote.key('K_RED_KEY')" value="" class="red four mt"/>
+								</th>
+								<th>
+									<input type="button" onClick="remote.key('K_GREEN_KEY')" value="" class="green four mt"/>
+								</th>
+								<th>
+									<input type="button" onClick="remote.key('K_YELLOW_KEY')" value="" class="yellow four mt"/>
+								</th>
+								<th>
+									<input type="button" onClick="remote.key('K_BLUE_KEY')" value="" class="blue four mt"/>
+								</th>
+							</tr>
+						</table>
+					</th>
+				</tr>
+				<!-- bottom buttons -->
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_TEXT')" value="TEXT" class="mt"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_T_OPT')" value="T.OPT" class="mt"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_SUBTITLE')" value="Subtitle" class="mt"/>
+					</th>
+				</tr>
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_STOP')" value="STOP"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_PLAY')" value="PLAY"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_PAUSE')" value="PAUSE"/>
+					</th>
+				</tr>
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_BACKWARD')" value="Rewind"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_FORWARD')" value="Forward"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_SIMPLINK')" value="Simplink"/>
+					</th>
+				</tr>
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_INFO')" value="INFO"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_AD')" value="AD"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_APP')" value="APP/*"/>
+					</th>
+				</tr>
+				<tr>
+					<th>
+						<input type="button" onClick="remote.key('K_REC')" value="REC"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_3D')" value="3D"/>
+					</th>
+					<th>
+						<input type="button" onClick="remote.key('K_LIVETV')" value="LIVE TV"/>
+					</th>
+				</tr>
+			</table>
+		</div>
+	</body>
 </html>
