OpenLGTV BCM: fix scalling and centering Remote Control on Android and iOS devices
git-svn-id: http://svn.openlgtv.org.ru@1178 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/index.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/index.html
@@ -9,10 +9,12 @@
 		<script type="text/javascript" src="remote.js"></script>
 		<!-- meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" / -->
 		<!-- meta name="viewport" content="width=device-width; target-densitydpi=device-dpi; user-scalable=no;" / -->
-		<meta name="viewport" content="width=240; height=640;" />
+		<!-- meta name="viewport" content="width=device-width" / -->
+		<meta name="viewport" content="width=device-width; height=device-height; target-densitydpi=device-dpi;">
+		<!-- meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" -->
 		<link rel="stylesheet" href="remote.css" type="text/css" media="screen"/>
 	</head>
-	<body><center>
+	<body>
 		<!-- main container -->
 		<div id="main">
 			<!-- main table -->
