OpenLGTV BCM: update list of rejected IP addresses
git-svn-id: http://svn.openlgtv.org.ru@1181 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -53,6 +53,7 @@ TODO (not everything to be done for 0.5.0):
     * ADD: more NetCast services
     * UPDATE: busybox upgrade from 1.20.0 to 1.20.1 (with 'ash', 'ifupdown', 'man', 'mke2fs', 'ps' and 'tar' patches)
     * UPDATE: update IR codes in irkeymap.cfg
+    * UPDATE: list of rejected IP addresses
     * CHANGE: support for versioned ywe*.tar.gz files instead ywe.tar.gz filename only, with support for ywedata.tar.gz archives
     * CHANGE: Remote Control web page rewriten by dbunic
 
