--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -51,6 +51,7 @@ TODO (not everything to be done for 0.5.0):
     * ADD: TVN alternative service
     * ADD: 'showmsg' shell function to show 2-line messages on TV screen
     * ADD: more NetCast services
+    * ADD: NetPlayer alternative icon
     * UPDATE: busybox upgrade from 1.20.0 to 1.20.1 (with 'ash', 'ifupdown', 'man', 'mke2fs', 'ps' and 'tar' patches)
     * UPDATE: update IR codes in irkeymap.cfg
     * UPDATE: list of rejected IP addresses
