OpenLGTV BCM: test with overlay images on NetCast icons
git-svn-id: http://svn.openlgtv.org.ru@1184 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
@@ -419,7 +419,7 @@ document.defaultAction = true;
 	<td align="center"><a id="c222" onKeyPress="javascript:setCurrent(this);return false" href='http://bbtv.bazuca.com/' target='_parent'><img src="Images/tmp/bazuca.png" border=2></a></td>
 </tr>
 <tr>
-	<td align="center"><a id="c223" onKeyPress="javascript:setCurrent(this);return false" href='http://qabbtv.lg.bazuca.com/country/CR' target='_parent'><img src="Images/tmp/bazuca.png" border=2><!-- ADD SEPARATE ICONS --></a></td>
+	<td align="center"><a id="c223" onKeyPress="javascript:setCurrent(this);return false" href='http://qabbtv.lg.bazuca.com/country/CR' target='_parent'><img style="background:url(Images/tmp/bazuca.png)" src="Images/tmp/overlay_cr.png" border=2><!-- ADD SEPARATE ICONS --></a></td>
 	<td align="center"><a id="c224" onKeyPress="javascript:setCurrent(this);return false" href='http://qabbtv.lg.bazuca.com/country/GT' target='_parent'><img src="Images/tmp/bazuca.png" border=2></a></td>
 	<td align="center"><a id="c225" onKeyPress="javascript:setCurrent(this);return false" href='http://qabbtv.lg.bazuca.com/country/MX' target='_parent'><img src="Images/tmp/bazuca.png" border=2></a></td>
 	<td align="center"><a id="c226" onKeyPress="javascript:setCurrent(this);return false" href='http://qabbtv.lg.bazuca.com/country/HV' target='_parent'><img src="Images/tmp/bazuca.png" border=2></a></td>
