OpenLGTV BCM: update TODO list in Changelog - these two features should be done for 0.5.0-rc2
git-svn-id: http://svn.openlgtv.org.ru@1186 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -24,6 +24,8 @@ TODO (not everything to be done for 0.5.0):
     * FileManager: add subtitles loading and audio tracks change possibility in played videos (?)
     * FileManager: add check mark to select multiple files/dirs and handle that in copy/move/delete/play (?)
     * FileManager: add command line or command window (?)
+    * rewrite of links.html as CGI to load links from separate CSV files and sort dependency on selected country/language
+    * option in settings to choose links.html from remote server or local file
     * add support for 'SmartTV-addon' packages
     * insert characters in cursor position in WebUI, Internet Browser and FileManager dialogs, not always at the end of string
     * udpxy integration for udp:// and rtp:// links
