--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -26,6 +26,7 @@ TODO (not everything to be done for 0.5.0):
     * FileManager: add command line or command window (?)
     * rewrite of links.html as CGI to load links from separate CSV files and sort dependency on selected country/language
     * option in settings to choose links.html from remote server or local file
+    * another Remote Control rewrite? - most likely as CGI to generate buttons on the fly + button for switching actions
     * add support for 'SmartTV-addon' packages
     * insert characters in cursor position in WebUI, Internet Browser and FileManager dialogs, not always at the end of string
     * udpxy integration for udp:// and rtp:// links
