OpenLGTV BCM: add udpxy2 binary to extroot (1.0.23-8-beta + patches for stream content)
git-svn-id: http://svn.openlgtv.org.ru@1213 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -55,7 +55,7 @@ TODO (not everything to be done for 0.5.0):
     * ADD: 'showmsg' shell function to show 2-line messages on TV screen
     * ADD: more NetCast services
     * ADD: NetPlayer alternative icon
-    * ADD: msdl (1.2.7-r2) and udpxy (1.0.23-7, with changed content-type to "application/x-netcast-av") to extroot
+    * ADD: msdl (1.2.7-r2) and udpxy (1.0.23-7, with changed content-type to "application/x-netcast-av" and patched 1.0.23-8-beta as udpxy2) to extroot
     * UPDATE: busybox upgrade from 1.20.0 to 1.20.1 (with 'ash', 'ifupdown', 'man', 'mke2fs', 'ps' and 'tar' patches)
     * UPDATE: update IR codes in irkeymap.cfg
     * UPDATE: list of rejected IP addresses
