--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -51,6 +51,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: LG firmware upgrades with "big" EPK files from USB that remove OpenLGTV BCM - OpenLGTV BCM will be removed but TV will still work
     * FIX: '3' (K_3) button handling in send_key.sh script and Remote Control page
     * FIX: msdl binary handling in msdl.sh
+    * FIX: workaround in imdb.sh using data provider change to ScreenRush instead of IMDB
     * ADD: TVN alternative service
     * ADD: 'showmsg' shell function to show 2-line messages on TV screen
     * ADD: more NetCast services
