OpenLGTV BCM: update thumbshot url for bookmarks by nicola_12345
git-svn-id: http://svn.openlgtv.org.ru@1217 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -52,6 +52,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: '3' (K_3) button handling in send_key.sh script and Remote Control page
     * FIX: msdl binary handling in msdl.sh
     * FIX: workaround in imdb.sh using data provider change to ScreenRush instead of IMDB
+    * FIX: update thumbshot url for bookmarks by nicola_12345
     * ADD: TVN alternative service
     * ADD: 'showmsg' shell function to show 2-line messages on TV screen
     * ADD: more NetCast services
