--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -53,6 +53,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: msdl binary handling in msdl.sh
     * FIX: workaround in imdb.sh using data provider change to ScreenRush instead of IMDB
     * FIX: update thumbshot url for bookmarks by nicola_12345
+    * FIX: Ipla alternative service after protocol change
     * ADD: TVN alternative service
     * ADD: 'showmsg' shell function to show 2-line messages on TV screen
     * ADD: more NetCast services
