OpenLGTV BCM: fix minor fix for TVP alternative service - duplicated fake entries in protocol
git-svn-id: http://svn.openlgtv.org.ru@1220 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -54,6 +54,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: workaround in imdb.sh using data provider change to ScreenRush instead of IMDB
     * FIX: update thumbshot url for bookmarks by nicola_12345
     * FIX: Ipla alternative service after protocol change
+    * FIX: minor fix for TVP alternative service after protocol change
     * ADD: TVN alternative service
     * ADD: 'showmsg' shell function to show 2-line messages on TV screen
     * ADD: more NetCast services
